syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "github.com/kdudkov/goatak/cotproto";

import "cotevent.proto";
import "takcontrol.proto";

// Top level message sent for TAK Messaging Protocol Version 1.
message TakMessage {
  // Optional - if omitted, continue using last reported control
  // information
  TakControl takControl = 1;

  // Optional - if omitted, no event data in this message
  CotEvent cotEvent = 2;

  uint64 submissionTime = 3;
  uint64 creationTime = 4;

}
